@@ -1,3 +1,6 @@
+2012-06-30  Kirit Saelensminde  <kirit@felspar.com>
+ Added configuration for the log level for the stdout global logger.
+
 2012-05-26  Kirit Saelensminde  <kirit@felspar.com>
  Changed the logging DSL for logging JSON objects thanks to suggestions from jeroen Vermeulen.
 
